# manuscriptune

./: .gitignore  CLAUDE.md  README.md  antigravity.yaml.example  events.jsonl  implementation_plan.md  pyproject.toml  walkthrough.md
.agents/: AGENTS.md  skills.json
.agents/workflows/: novel_review_pipeline.md
.claude/hooks/: session-start.sh
.github/: issue_template.md  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  orchestune-dispatch.yml
docs/orchestune/: 2026-07-06-dispatch-pilot-postmortem.md  operations-manual.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css  store.js  utils.js  utils.test.js
frontend/src/lib/: Counter.test.js  EditorModals.svelte  FindingChat.svelte  FindingsPanel.svelte  FindingsPanel.test.js  NovelPanel.svelte  PlotPanel.svelte  apiClient.js
frontend/src/views/: Dashboard.svelte  Editor.svelte  Editor.test.js  PlotCreate.svelte  PlotCreate.test.js  PlotReview.svelte  ReviewHistory.svelte  Settings.svelte  Sync.svelte
scripts/: local-ci.sh
skills/local-ci-developer/: SKILL.md
skills/logic-consistency-reviewer/: SKILL.md
skills/novel-formatter/scripts/: novel_formatter_helper.py
skills/novel-writer/: writer_helper.py
skills/novel-writer-antigravitycli/: writer_cli.py
skills/novel_writer_antigravitycli/: SKILL.md  writer_cli.py
skills/orchestrator-dispatch-draft/: SKILL.md
skills/orchestune-dispatch-draft/: SKILL.md
skills/plot-conflict-analyzer/: SKILL.md
skills/plot-structure-reviewer/: SKILL.md
skills/style-expression-reviewer/: SKILL.md
skills/webui-developer/: SKILL.md
src/: apply_findings.py  filter_context.py  integrate_findings.py  integrate_plot_findings.py  review_server.py  run_plot_review_pipeline.py  run_review_pipeline.py
src/cli/: apply_findings.py  integrate_findings.py  integrate_plot_findings.py  review_server.py  run_plot_review_pipeline.py  sync_gdrive.py
src/findings/: applier.py  integration.py
src/pipeline/: phase_context_filter.py  phase_integration.py
src/routes/: api.py  deps.py  novels.py  plots.py  review_history.py  sync.py
src/routes/models/: novels.py  plots.py  review_history.py
src/services/: chat_service.py  findings_service.py  novel_service.py  pipeline_service.py  plot_writer_service.py  process_manager.py  review_history_service.py  stream_service.py  writer_service.py
src/static/css/: style.css
src/static/js/: app.js
src/static/js/views/: editor.js  settings.js  write.js
src/templates/: index.html
src/templates/components/: modals.html  sidebar.html
src/templates/views/: dashboard.html  editor.html  review.html  settings.html  sync.html  write.html
src/utils/: ai_cli_executor.py  ai_exceptions.py  ai_task.py  cancellation.py  detect_bloat.py  detect_coverage_gaps.py  flaky_quarantine.py  github_helper.py  logger.py  path_safety.py  plot_parser.py  project_config.py  project_paths.py  yaml_handler.py
src/utils/ai_tasks/: base.py  plotting.py
tests/: conftest.py  flaky_quarantine.yaml  test_ai_model_parser.py  test_ai_task.py  test_ai_tasks_plotting.py  test_api_cancel.py  test_api_models.py  test_api_settings.py  test_apply_findings.py  test_apply_findings_robust.py  test_auth_origin_guard.py  test_cancellation.py  test_chat_service.py  test_detect_bloat.py  test_detect_coverage_gaps.py  test_filter_context.py  test_findings_integration.py  test_findings_service.py  test_flaky_quarantine.py  test_github_helper.py  test_integrate_findings.py  test_integrate_plot_findings.py  test_logger.py  test_novel_service_archive.py  test_path_safety.py  test_plot_writer_service.py  test_project_config.py  test_project_paths.py  test_require_api_key.py  test_review_history_routes.py  test_review_history_service.py  test_review_server.py  test_run_plot_review_pipeline.py  test_run_review_pipeline.py  test_stream_service.py  test_sync_check.py  test_sync_gdrive.py  test_writer_cli.py  test_writer_service.py
tools/orchestrator/: README.md  pyproject.toml
tools/orchestrator/scripts/: local-ci.sh
tools/orchestrator/src/: dag.py  dispatcher.py
tools/orchestrator/tests/: test_dag.py  test_dispatcher.py
tools/orchestune/: CONSTITUTION.md  README.md  events.jsonl  pyproject.toml  run_state.json
tools/orchestune/scripts/: local-ci.sh
tools/orchestune/src/: dag.py  dispatch_gc.py  dispatch_locks.py  dispatch_rebase.py  dispatch_scoring.py  dispatch_targets.py  dispatcher.py  github.py  integration_coordinator.py  integration_review_state.py  integrator.py
tools/orchestune/tests/: test_closed_loop.py  test_dag.py  test_dispatch_gc.py  test_dispatch_locks.py  test_dispatch_rebase.py  test_dispatch_scoring.py  test_dispatch_state.py  test_dispatch_targets.py  test_dispatcher.py  test_github.py  test_integration_coordinator.py  test_integration_review_state.py  test_integrator.py  test_not_needed_review_state.py  test_placeholder.py
