[tool.poetry]
name = "orchestrator"
version = "0.1.0"
description = "Manuscriptune マルチエージェント実装オーケストレーター (分解案パース・結合度スコア算出・DAG構築)"
authors = ["sshioyama"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.4.10"
mypy = "^1.10.1"
types-pyyaml = "^6.0.12.20240311"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C90"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=src --cov-fail-under=75 --cov-report=term-missing"
